--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.4",
-    "react-router-dom": "^6.3.0"
+    "mongoose": "^6.5.2"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
